--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,12 +1,13 @@
 ---
-import Breadcrumbs from '@/components/Breadcrumbs.astro'
-import Container from '@/components/Container.astro'
-import ProjectCard from '@/components/ProjectCard.astro'
-import { SITE } from '@/consts'
-import Layout from '@/layouts/Layout.astro'
-import { getCollection } from 'astro:content'
+import Breadcrumbs from '@/components/Breadcrumbs.astro';
+import Container from '@/components/Container.astro';
+import ProjectCard from '@/components/ProjectCard.astro';
+import { SITE } from '@/consts';
+import Layout from '@/layouts/Layout.astro';
+import { getCollection } from 'astro:content';
 
-const projects = await getCollection('projects')
+const projects = await getCollection('projects');
+const projectsData = projects.map(project => project.data);
 ---
 
 <Layout title="Projects" description={SITE.DESCRIPTION}>
@@ -22,7 +23,9 @@ const projects = await getCollection('projects')
 
         <!-- <h2 class="mb-4 text-2xl font-semibold">Projects</h2> -->
         <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-          {projects.map((project) => <ProjectCard project={project} />)}
+          {projects.map((project) => (
+            <ProjectCard project={project} />
+          ))}
         </div>
       </div>
     </section>
