--- a/src/components/AuthorCard.astro
+++ b/src/components/AuthorCard.astro
@@ -1,16 +1,34 @@
 ---
-import Link from '@/components/Link.astro'
-import AvatarComponent from '@/components/ui/avatar'
-import type { Link as SocialLink } from '@/consts'
-import { cn } from '@/lib/utils'
-import type { CollectionEntry } from 'astro:content'
-import SocialIcons from './SocialIcons.astro'
+import Link from '@/components/Link.astro';
+import AvatarComponent from '@/components/ui/avatar';
+import type { Link as SocialLink } from '@/consts';
+import { cn } from '@/lib/utils';
+import SocialIcons from './SocialIcons.astro';
 
 type Props = {
-  author: CollectionEntry<'authors'>
-  linkDisabled?: boolean
-}
-const { author, linkDisabled = false } = Astro.props
+  author: {
+    name: string;
+    full_name: string;
+    avatar: string;
+    bio: string;
+    pronouns?: string;
+    linkedin?: string;
+    github?: string;
+    twitter?: string;
+    bluesky?: string;
+    threads?: string;
+    mastodon?: string;
+    instagram?: string;
+    website?: string;
+    goodreads?: string;
+    mail?: string;
+    slug: string;
+  };
+  linkDisabled?: boolean;
+};
+
+const { author, linkDisabled = false } = Astro.props as Props;
+
 const {
   name,
   full_name,
@@ -27,7 +45,7 @@ const {
   website,
   goodreads,
   mail,
-} = author.data
+} = author;
 
 const socialLinks: SocialLink[] = [
   website && { href: website, label: 'Website' },
@@ -40,7 +58,7 @@ const socialLinks: SocialLink[] = [
   instagram && { href: instagram, label: 'Instagram' },
   goodreads && { href: goodreads, label: 'Goodreads' },
   mail && { href: mail, label: 'Email' },
-].filter(Boolean) as SocialLink[]
+].filter(Boolean) as SocialLink[];
 ---
 
 <div
@@ -55,7 +73,7 @@ const socialLinks: SocialLink[] = [
         client:load
         src={avatar}
         alt={`Avatar of ${full_name}`}
-        fallback={name[0]}
+        fallback={name ? name[0] : ''}
         className={cn(
           'size-32 rounded-md',
           !linkDisabled &&
@@ -67,11 +85,9 @@ const socialLinks: SocialLink[] = [
       <div>
         <div class="flex flex-wrap items-center gap-x-2">
           <h3 class="text-lg font-semibold">{full_name}</h3>
-          {
-            pronouns && (
-              <span class="text-sm text-muted-foreground">({pronouns})</span>
-            )
-          }
+          {pronouns && (
+            <span class="text-sm text-muted-foreground">({pronouns})</span>
+          )}
         </div>
         <p class="text-sm text-muted-foreground">{bio}</p>
       </div>
