--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -1,37 +1,74 @@
 ---
-import BlogCard from '@/components/BlogCard.astro'
-import Breadcrumbs from '@/components/Breadcrumbs.astro'
-import Container from '@/components/Container.astro'
-import PaginationComponent from '@/components/ui/pagination'
-import { SITE } from '@/consts'
-import Layout from '@/layouts/Layout.astro'
-import type { PaginateFunction } from 'astro'
-import { type CollectionEntry, getCollection } from 'astro:content'
+import BlogCard from '@/components/BlogCard.astro';
+import Breadcrumbs from '@/components/Breadcrumbs.astro';
+import Container from '@/components/Container.astro';
+import PaginationComponent from '@/components/ui/pagination';
+import { SITE } from '@/consts';
+import Layout from '@/layouts/Layout.astro';
+import type { PaginateFunction } from 'astro';
+import { type CollectionEntry, getCollection } from 'astro:content';
 
 export async function getStaticPaths({
   paginate,
 }: {
-  paginate: PaginateFunction
+  paginate: PaginateFunction;
 }) {
-  const allPosts = await getCollection('posts', ({ data }) => !data.draft)
+  const allPosts = await getCollection('posts', ({ data }) => !data.draft);
   return paginate(
     allPosts.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf()),
-    { pageSize: SITE.POSTS_PER_PAGE },
-  )
+    { pageSize: SITE.POSTS_PER_PAGE }
+  );
 }
 
-const { page } = Astro.props
+type Author = {
+  slug: string;
+  name: string;
+  full_name: string;
+  avatar: string;
+  isRegistered: boolean;
+};
+
+type Props = {
+  page: {
+    data: CollectionEntry<'posts'>[];
+    currentPage: number;
+    lastPage: number;
+  };
+};
+
+const { page } = Astro.props as Props;
+
+const authors = await getCollection('authors');
+const authorsData: Author[] = authors.map(author => ({
+  slug: author.slug,
+  name: author.data.name,
+  full_name: author.data.full_name,
+  avatar: author.data.avatar,
+  isRegistered: true,
+}));
+
+const getAuthorsForPost = (post: CollectionEntry<'posts'>): Author[] => {
+  return (post.data.authors || []).map((authorSlug: string) => {
+    return authorsData.find((author) => author.slug === authorSlug) || {
+      slug: authorSlug,
+      name: authorSlug,
+      full_name: authorSlug,
+      avatar: '/static/logo.png',
+      isRegistered: false,
+    };
+  });
+};
 
 const postsByYear = page.data.reduce(
   (acc: Record<string, CollectionEntry<'posts'>[]>, post) => {
-    const year = post.data.date.getFullYear().toString()
-    ;(acc[year] ??= []).push(post)
-    return acc
+    const year = post.data.date.getFullYear().toString();
+    (acc[year] ??= []).push(post);
+    return acc;
   },
-  {},
-)
+  {}
+);
 
-const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
+const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a));
 ---
 
 <Layout title="Posts" description="Blog Posts">
@@ -44,20 +81,18 @@ const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
     />
 
     <div class="flex min-h-[calc(100vh-18rem)] flex-col gap-y-8">
-      {
-        years.map((year) => (
-          <section class="flex flex-col gap-y-4">
-            <div class="font-semibold">{year}</div>
-            <ul class="not-prose flex flex-col gap-4">
-              {postsByYear[year].map((post) => (
-                <li>
-                  <BlogCard entry={post} />
-                </li>
-              ))}
-            </ul>
-          </section>
-        ))
-      }
+      {years.map((year) => (
+        <section class="flex flex-col gap-y-4">
+          <div class="font-semibold">{year}</div>
+          <ul class="not-prose flex flex-col gap-4">
+            {postsByYear[year].map((post) => (
+              <li>
+                <BlogCard entry={post} authors={getAuthorsForPost(post)} />
+              </li>
+            ))}
+          </ul>
+        </section>
+      ))}
     </div>
 
     <PaginationComponent
