--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,38 +1,22 @@
 ---
-import Breadcrumbs from '@/components/Breadcrumbs.astro'
-import Container from '@/components/Container.astro'
-import Link from '@/components/Link.astro'
-import { badgeVariants } from '@/components/ui/badge'
-import Layout from '@/layouts/Layout.astro'
-import { Icon } from 'astro-icon/components'
-import { getCollection } from 'astro:content'
+import Breadcrumbs from '@/components/Breadcrumbs.astro';
+import Container from '@/components/Container.astro';
+import Layout from '@/layouts/Layout.astro';
+import { getCollection } from 'astro:content';
+import TagsComponent from '@/components/TagsComponent.astro';
 
-const posts = (await getCollection('posts')).filter((post) => !post.data.draft)
+const posts = await getCollection('posts');
+const postsData = posts.filter((post) => !post.data.draft).map(post => post.data);
 
-const tags = posts
-  .flatMap((post) => post.data.tags)
-  .filter((tag, index, self) => self.indexOf(tag) === index)
+const tags = postsData
+  .flatMap((post) => post.tags)
+  .filter((tag): tag is string => typeof tag === 'string')
+  .filter((tag, index, self) => self.indexOf(tag) === index);
 ---
 
 <Layout title="Tags" description="A list of all tags used in blog posts">
   <Container class="flex flex-col gap-y-6">
     <Breadcrumbs items={[{ label: 'Tags', icon: 'lucide:tags' }]} />
-
-    <div class="flex flex-col gap-4">
-      <h1 class="text-3xl font-semibold">Tags</h1>
-      <div class="flex flex-wrap gap-2">
-        {
-          tags.map((tag) => (
-            <Link
-              href={`/tags/${tag}`}
-              class={badgeVariants({ variant: 'secondary' })}
-            >
-              <Icon name="lucide:hash" class="size-3 -translate-x-0.5" />
-              {tag}
-            </Link>
-          ))
-        }
-      </div>
-    </div>
+    <TagsComponent tags={tags} />
   </Container>
 </Layout>
