fix: work study dashboard url and profile images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const getAuthorsForPost = (post: CollectionEntry<'posts'>): Author[] => {
       slug: authorSlug,
       name: authorSlug,
       full_name: authorSlug,
-      avatar: '/static/logo.png',
+      avatar: '/static/profile.png',
       isRegistered: false,
     };
   });
