--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -40,7 +40,7 @@ const authorData = authors.map((author) => ({
   slug: author,
   name: author,
   full_name: author,
-  avatar: '/static/logo.png',
+  avatar: '/static/profile.png',
   isRegistered: false,
 }));
 
