--- a/src/pages/about/[...slug].astro
+++ b/src/pages/about/[...slug].astro
@@ -67,7 +67,7 @@ const getAuthorsForPost = (post: CollectionEntry<'posts'>): Author[] => {
       slug: authorSlug,
       name: authorSlug,
       full_name: authorSlug,
-      avatar: '/static/logo.png',
+      avatar: '/static/profile.png',
       isRegistered: false,
     };
   });
