style: update body font to Inter

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,9 @@ import logo from '../../public/static/logo.png'
         class="flex flex-shrink-0 items-center gap-2 text-xl font-semibold transition-colors duration-300 hover:text-primary"
       >
         <Image src={logo} alt="Logo" class="size-10" width="36" height="36" style="object-fit: contain;" />
-        {SITE.TITLE}
+        <h1 class="font-extrabold">
+          {SITE.TITLE}
+        </h1>
       </Link>
       <div class="flex items-center gap-2 md:gap-4">
         <nav class="hidden items-center gap-4 text-sm sm:gap-6 md:flex">
