style: update font sizes

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -43,10 +43,10 @@ const readTime = readingTime(entry.body);
       </div>
     )}
     <div class="flex-grow">
-      <h3 class="mb-1 text-lg font-semibold">
+      <h3 class="mb-1 text-xl font-extrabold leading-extra-tight">
         {entry.data.title}
       </h3>
-      <p class="mb-2 text-sm text-muted-foreground">
+      <p class="mb-2 text-sm font-medium text-muted-foreground">
         {entry.data.description}
       </p>
       <div
