--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -23,7 +23,7 @@ const { project } = Astro.props
       class="w-full object-cover rounded-xl"
     />
     <div class="p-4">
-      <h3 class="mb-2 text-lg font-semibold">{project.data.name}</h3>
+      <h3 class="mb-2 text-xl font-black leading-extra-tight">{project.data.name}</h3>
       <p class="mb-4 text-sm text-muted-foreground">
         {project.data.description}
       </p>
