--- a/src/components/mdx/Callout.astro
+++ b/src/components/mdx/Callout.astro
@@ -39,8 +39,8 @@ const finalClasses = customClasses || classes
 ---
 
 <div class={`relative my-6 flex gap-4 rounded-xl border-2 p-4 ${finalClasses}`}>
-  <span class="text-md pointer-events-none select-none">
-    <Icon name={finalIcon} size={23} class="translate-y-1.5" />
+  <span class="text-md pointer-events-none select-none relative" style="top: 7px;">
+    <Icon name={finalIcon} size={23} />
   </span>
   <div class="-my-4 prose-code:break-all">
     <slot />
